--- a/package.json
+++ b/package.json
@@ -11,21 +11,23 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "@cryptonteam/web4": "^0.1.7",
     "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/pwa": "^3.3.5",
-    "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
-    "vue-loader": "^15.9.6",
-    "vuex": "^3.6.2",
     "@nuxtjs/color-mode": "^2.0.10",
-    "vee-validate": "^3.3.9",
-    "vue": "^2.6.12",
+    "@nuxtjs/pwa": "^3.3.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "clipboard": "^2.0.8"
+    "bignumber.js": "^9.0.1",
+    "clipboard": "^2.0.8",
+    "core-js": "^3.15.1",
+    "nuxt": "^2.15.7",
+    "vee-validate": "^3.3.9",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.6",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
